# ESP32-Weather-Station

./: .gitignore  Barometer functionality.txt  CMakeLists.txt  README.md  partitions.csv  sdkconfig.default  server_post_store_get.py  server_post_store_get.py_bck
components/air_quality/: CMakeLists.txt  air_quality.c  air_quality.h
components/baro_forecast/: CMakeLists.txt  baro_forecast.c
components/baro_forecast/include/: baro_forecast.h
components/bme68x/: CMakeLists.txt  bme68x_esp32_i2c.c  bme68x_esp32_i2c.h
components/minmax_stats/: CMakeLists.txt  minmax_stats.c  minmax_stats.h
components/pushbuttons/: CMakeLists.txt  pushbuttons.c  pushbuttons.h
components/shellyble/: CmakeLists.txt  shellyble.c  shellyble.h
components/st7789h2/: CMakeLists.txt  font5x7.c  st7789h2.c
components/st7789h2/Include/: font5x7.h  st7789h2.h
components/ui/: CMakeLists.txt  ui.c  ui.h
components/ui_controller/: CMakeLists.txt  ui_controller.c  ui_controller.h
main/: CMakeLists.txt  main_app.c  ui.c  ui.h  weather_queue.c  wifi_transport.c
main/include/: weather_queue.h  weather_sample.h  wifi_transport.h
